SFE22D-27 - Fix component overlap

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -67,6 +67,7 @@
     &__academies-dropdown {
       position: absolute;
       top: to-rem(78);
+      z-index: 1; //temporary fix
     }
 
     &__academies-menu:hover {
